<?xml version="1.0"?>
<package format="2">
  <name>leptrino</name>
  <version>0.0.0</version>
  <description>The leptrino package</description>

  <maintainer email="yue@todo.todo">yue</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>

  </export>
</package>
